# ros_localization

./: .gitignore  README.md  README_realtime_localization.md
rviz/: raw_register.rviz
src/ekf/: CMakeLists.txt  package.xml
src/ekf/include/ekf_core/: extended_kalman_filter.hpp  kalman_filter_model_base.hpp  sensor_measurement_base.hpp
src/ekf/include/ekf_core/measurements/: acceleration_measurement.hpp  angularvelocity_measurement.hpp  heading_measurement.hpp  position_measurement.hpp  steeringwheel_measurement.hpp  velocity_measurement.hpp  wheel_measurement.hpp
src/ekf/include/ekf_core/models/: akerman.hpp  bicycle.hpp  bicyclelr.hpp  ctra.hpp
src/ekf/launch/: ekf.launch
src/ekf/src/: README.txt  akerman-un.cpp  akermangps.cpp  akermangpslidar.cpp  akermangpsvel.cpp  akermanslam.cpp  akermanslamlidar.cpp  bicycle-un.cpp  bicycleslam.cpp  bicycleslamlidar.cpp
src/ndt_omp/: CMakeLists.txt
src/pcl_regis/: CMakeLists.txt  package.xml
src/pcl_regis/src/: hello_pub.cpp  hello_sub.cpp
src/pint_cloud_hello/: CMakeLists.txt  package.xml
src/pint_cloud_hello/launch/: robot_mapping.launch
src/pint_cloud_hello/src/: chatter_pub.py  chatter_sub.py  register.cpp  talker_pub.cpp
src/prm_localization/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/prm_localization/cmake/Modules/: ArchConfiguration.cmake  FindDriveworks.cmake
src/prm_localization/include/prm_localization/: discriptor.hpp  eigen_stamped.hpp  transform_utility.hpp
src/prm_localization/launch/: XJTU_underground_parkinglot.launch  XJTU_underground_parkinglot_no_manager.launch  XJTU_underground_parkinglot_offine.launch  XJTU_underground_parkinglot_standalone.launch  changshu_underground_parkinglot.launch  changshu_underground_parkinglot_offline.launch  minimalBringUp.launch  offline_yuyao_factory.launch  start_position  try.launch  wh_factory.launch  yuyao_factory.launch
src/prm_localization/rviz/: XJTU_ugpl.rviz  result.rviz  rt_location.rviz
src/prm_localization/src/: blank.cpp  globalmap_provider_nodelet.cpp  hello_nvidva.cpp  prm_localization.cpp  prm_localization_nodelet.cpp  rt_localization.cpp  rt_localization_debug.cpp  rt_localization_nodelet.cpp  streeing_to_motion.cpp
src/ukf/: CMakeLists.txt  package.xml
src/ukf/include/: conversions.h
src/ukf/include/ukf_core/: kalman_filter_model_base.hpp  sensor_measurement_base.hpp~HEAD  unscented_kalman_filter.hpp  unscented_kalman_filterold.hpp
src/ukf/include/ukf_core/measurements/: acceleration_measurement.hpp  angularvelocity_measurement.hpp  heading_measurement.hpp  position_measurement.hpp  velocity_measurement.hpp
src/ukf/include/ukf_core/measurements3d/: acceleration_measurement.hpp  angularvelocity_measurement.hpp  heading_measurement.hpp  position_measurement.hpp
src/ukf/include/ukf_core/models/: smodel_ukf2d.hpp  smodel_ukf2dcomp.hpp  smodel_ukf2deasy.hpp  smodel_ukf3d.hpp  smodel_ukfold.hpp
src/ukf/launch/: ukf.launch
src/ukf/src/: back  sukf2d.cpp  sukf2dslamlidar.cpp  sukf2dslamlidarrealtime.cpp  sukf3d.cpp
src/xc_lidar/: CMakeLists.txt  package.xml
src/xc_lidar/include/: lidar_odometry.h  points_downsampler.h
src/xc_lidar/launch/: localization_map.launch
src/xc_lidar/src/lidar_odometry/: lidar_odometry.cpp  main.cpp
src/yuyao/: CMakeLists.txt  package.xml
src/yuyao/include/ekf_core/: extended_kalman_filter.hpp
src/yuyao/include/ekf_core/measurements/: acceleration_measurement.hpp  angularvelocity_measurement.hpp  heading_measurement.hpp  position_measurement.hpp  steeringwheel_measurement.hpp  velocity_measurement.hpp  wheel_measurement.hpp
src/yuyao/include/ekf_core/models/: bicycle.hpp
src/yuyao/include/new/: faddeeva.cpp
src/yuyao/msg/: Zpre.msg
src/yuyao/src/: bicyclebsekf_node.cpp  bicyclelidar.cpp  imu.cpp  lidarodom.cpp  lidarodomold.cpp  mailun.cpp  mailunca.cpp  mailunca.cpp.backup  mailunca_debug.cpp
