<?xml version="1.0"?>
<package format="2">
  <name>syq_ekf</name>
  <version>2.4.0</version>
  <description>Provides nonlinear state estimation through sensor fusion of an abritrary number of sensors.</description>

  <maintainer email="1159364090@qq.com">ShenYanqing</maintainer>

  <license>BSD</license>

  <url type="website">  </url>

  <author email="1159364090@qq.com">ShenYanqing</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>dbw_mkz_msgs</depend>
  <depend>apriltags2_ros</depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
