<?xml version="1.0"?>
<package>
  <name>lidar_odometry</name>
  <version>0.0.0</version>
  <description>The hdl_localization package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>gps_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>registration</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ndt_omp</build_depend>
  <!-- <build_depend>eigen_conversions</build_depend> -->
  
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gps_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>registration</run_depend>
  <run_depend>eigen_conversions</run_depend>

  
  
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ndt_omp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
